Bug 155685 - CRASH: after undoing deletion with extended select all and table at end
Summary: CRASH: after undoing deletion with extended select all and table at end
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.6.0 target:24.2.0 target:7.6...
Keywords: bibisected, bisected, haveBacktrace
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2023-06-05 11:46 UTC by Xisco Faulí
Modified: 2023-09-06 22:50 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document (100.97 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-06-05 11:46 UTC, Xisco Faulí
Details
bt with debug symbols (10.65 KB, text/plain)
2023-06-05 12:26 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-06-05 11:46:36 UTC
Created attachment 187729 [details]
sample document

Steps to reproduce:
1. Open attached document
2. Select all
3. Delete
4. Undo

-> Crash

Reproduced in

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 845054aa25b7cba1daa1ff30b142d549027299bd
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-06-05 11:48:25 UTC
The crash started to happen after

author	Michael Stahl <michael.stahl@allotropia.de>	2023-05-08 16:38:03 +0200
committer	Michael Stahl <michael.stahl@allotropia.de>	2023-05-09 10:34:40 +0200
commit d81379db730a163c5ff75d4f3a3cddbd7b5eddda (patch)
tree 27ceb91b3da10a4e00df329a73512b44afde00c6
parent edf471ba8b5a69ce26e68eff26283b304c4c9a9e (diff)
tdf#154877 sw: generalise ExtendedSelectAll()

Before it, Select all didn't work

@M. Stahl, I thought you might be interested in this issue
Comment 2 Julien Nabet 2023-06-05 12:26:31 UTC
Created attachment 187730 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.

I also noticed this log several times:
warn:legacy.osl:39035:39035:sw/source/core/docnode/nodes.cxx:762: wrong StartNode
Comment 3 Commit Notification 2023-06-06 10:03:37 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f66d5331c1f55dfc88b1439f1b8e10ebe41d3f98

tdf#155685 sw: fix crash on undo of ExtendedSelectAll with table at end

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl 2023-06-06 10:04:16 UTC
fixed on master
Comment 5 Julien Nabet 2023-06-06 18:36:46 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce the crash but when undoing, there's just:
"Difficulté N°1 
Les nombres ne s'affichent pas"
and it's only when undoing a second time that I see the table again.
Comment 6 Commit Notification 2023-06-07 20:42:42 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e995fc61cef8fad6076212a0d7e8e357e5db1793

tdf#155685: sw_uiwriter3: Add unittest

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-06-15 15:18:50 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4ef548a672658ab164e45e45ebd1b9f0b9282019

tdf#155685 sw: fix another ExtendedSelectAll Redo crash w table at end

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-06-15 15:19:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5ab4fb27f4232fe0f36cfc079acb065d1712a355

tdf#155685 sw: ExtendedSelectAll with tables, group the Undo objects

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-06-15 18:09:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/a398e3eb78783dfe533b55b6f174d76265ea422b

tdf#155685 sw: fix another ExtendedSelectAll Redo crash w table at end

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-06-15 18:09:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/916caa67508530c38eea50061390e8e4ec7e8cc9

tdf#155685 sw: ExtendedSelectAll with tables, group the Undo objects

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-06-23 20:52:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/1af94c9f4ce5754bc64a30fd5b2250d7ec2c4f46

tdf#155685 sw: fix crash on undo of ExtendedSelectAll with table at end

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-06-23 20:54:34 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/1adbd1024d064b1a22ea9b36ae40cf78f21e4d19

tdf#155685 sw: fix another ExtendedSelectAll Redo crash w table at end

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-06-23 20:54:37 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/60e842da3ec3b48b715d9793a3cdeff76efa4152

tdf#155685 sw: ExtendedSelectAll with tables, group the Undo objects

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.